--- a/Doctor-Patient-Portal/pom.xml
+++ b/Doctor-Patient-Portal/pom.xml
@@ -54,4 +54,9 @@
 		</plugins>
 		<finalName>Doctor-Patient-Portal</finalName>
 	</build>
+	<properties>
+                    <maven.compiler.source>1.7</maven.compiler.source>
+                    <maven.compiler.target>1.7</maven.compiler.target>
+        </properties>
+
 </project>
