--- a/Doctor-Patient-Portal/Dockerfile
+++ b/Doctor-Patient-Portal/Dockerfile
@@ -1,5 +1,8 @@
-FROM jdk
+FROM openjdk:11
 WORKDIR /dpp
 COPY . /dpp/
-EXPOSE 8083
-ENTRYPOINT ["java","-jar",]
+EXPOSE 8082
+ADD target/Doctor-Patient-Portal.war Doctor-Patient-Portal.war
+ENTRYPOINT ["java","-jar","/Doctor-Patient-Portal.war"]
+
+
