--- a/Doctor-Patient-Portal/pom.xml
+++ b/Doctor-Patient-Portal/pom.xml
@@ -58,5 +58,15 @@
                     <maven.compiler.source>1.7</maven.compiler.source>
                     <maven.compiler.target>1.7</maven.compiler.target>
         </properties>
+	<distributionManagement> 
+           <repository>
+            <id>maven-releases</id>
+            <url>http://34.207.189.118:8081/repository/maven-releases/</url>
+           </repository>
+          <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://34.207.189.118:8081/repository/maven-snapshots/</url>  
+          </snapshotRepository>
+       </distributionManagement>
 
 </project>
