--- a/Doctor-Patient-Portal/Dockerfile
+++ b/Doctor-Patient-Portal/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:11
-WORKDIR /dpp
-COPY . /dpp/
+WORKDIR /dpps
+COPY . /dpps/
 EXPOSE 8083
 ADD target/Doctor-Patient-Portal.war Doctor-Patient-Portal.war
 ENTRYPOINT ["java","-jar","/Doctor-Patient-Portal.war"]
