--- a/Doctor-Patient-Portal/Dockerfile
+++ b/Doctor-Patient-Portal/Dockerfile
@@ -6,6 +6,6 @@ COPY .env ./
 ENV MYSQL_HOST=$MYSQL_HOST
 ENV MYSQL PORT=$MYSQL_PORT
 ADD target/Doctor-Patient-Portal.war Doctor-Patient-Portal.war
-ENTRYPOINT ["java","-jar","/Doctor-Patient-Portal.war"]
+ENTRYPOINT ["java","-jar","Doctor-Patient-Portal.war"]
 
 
